; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_real.c_realfs_open.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_real.c_realfs_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fd = type { i32, i32* }
%struct.mount = type { i32 }

@realfs_fdops = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.fd* (%struct.mount*, i8*, i32, i32)* @realfs_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.fd* @realfs_open(%struct.mount* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.fd*, align 8
  %6 = alloca %struct.mount*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.fd*, align 8
  store %struct.mount* %0, %struct.mount** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %13 = load i32, i32* %8, align 4
  %14 = call i32 @open_flags_real_from_fake(i32 %13)
  store i32 %14, i32* %10, align 4
  %15 = load %struct.mount*, %struct.mount** %6, align 8
  %16 = getelementptr inbounds %struct.mount, %struct.mount* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i8*, i8** %7, align 8
  %19 = call i32 @fix_path(i8* %18)
  %20 = load i32, i32* %10, align 4
  %21 = load i32, i32* %9, align 4
  %22 = call i32 @openat(i32 %17, i32 %19, i32 %20, i32 %21)
  store i32 %22, i32* %11, align 4
  %23 = load i32, i32* %11, align 4
  %24 = icmp slt i32 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %4
  %26 = call i32 (...) @errno_map()
  %27 = call %struct.fd* @ERR_PTR(i32 %26)
  store %struct.fd* %27, %struct.fd** %5, align 8
  br label %36

28:                                               ; preds = %4
  %29 = call %struct.fd* @fd_create(i32* @realfs_fdops)
  store %struct.fd* %29, %struct.fd** %12, align 8
  %30 = load i32, i32* %11, align 4
  %31 = load %struct.fd*, %struct.fd** %12, align 8
  %32 = getelementptr inbounds %struct.fd, %struct.fd* %31, i32 0, i32 0
  store i32 %30, i32* %32, align 8
  %33 = load %struct.fd*, %struct.fd** %12, align 8
  %34 = getelementptr inbounds %struct.fd, %struct.fd* %33, i32 0, i32 1
  store i32* null, i32** %34, align 8
  %35 = load %struct.fd*, %struct.fd** %12, align 8
  store %struct.fd* %35, %struct.fd** %5, align 8
  br label %36

36:                                               ; preds = %28, %25
  %37 = load %struct.fd*, %struct.fd** %5, align 8
  ret %struct.fd* %37
}

declare dso_local i32 @open_flags_real_from_fake(i32) #1

declare dso_local i32 @openat(i32, i32, i32, i32) #1

declare dso_local i32 @fix_path(i8*) #1

declare dso_local %struct.fd* @ERR_PTR(i32) #1

declare dso_local i32 @errno_map(...) #1

declare dso_local %struct.fd* @fd_create(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
